--- a/docs/file/src/components/checkbox/Checkbox.js.html
+++ b/docs/file/src/components/checkbox/Checkbox.js.html
@@ -220,7 +220,7 @@ export default class CheckBoxComponent extends BaseComponent {
     return BaseComponent.schema({
       type: &apos;checkbox&apos;,
       inputType: &apos;checkbox&apos;,
-      label: &apos;Checkbox&apos;,
+      label: &apos;&#x590D;&#x9009;&#x6846;&apos;,
       key: &apos;checkbox&apos;,
       dataGridLabel: true,
       labelPosition: &apos;right&apos;,
@@ -231,7 +231,7 @@ export default class CheckBoxComponent extends BaseComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Checkbox&apos;,
+      title: &apos;&#x590D;&#x9009;&#x6846;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;fa fa-check-square&apos;,
       documentation: &apos;http://help.form.io/userguide/#checkbox&apos;,
