--- a/docs/file/src/components/_classes/component/editForm/Component.edit.display.js.html
+++ b/docs/file/src/components/_classes/component/editForm/Component.edit.display.js.html
@@ -228,9 +228,9 @@ export default [
     type: &apos;textfield&apos;,
     input: true,
     key: &apos;label&apos;,
-    label: &apos;Label&apos;,
-    placeholder: &apos;Field Label&apos;,
-    tooltip: &apos;The label for this field that will appear next to it.&apos;,
+    label: &apos;&#x6807;&#x7B7E;&apos;,
+    placeholder: &apos;&#x6807;&#x7B7E;&#x6587;&#x672C;&apos;,
+    tooltip: &apos;&#x7528;&#x4E8E;&#x663E;&#x793A;&#x5728;&#x63A7;&#x4EF6;&#x4E0A;&#x7684;&#x6807;&#x7B7E;&#x6587;&#x672C;&apos;,
     validate: {
       required: true
     }
