--- a/src/templates/bootstrap/builderWizard/form.hbs
+++ b/src/templates/bootstrap/builderWizard/form.hbs
@@ -10,8 +10,8 @@
       </li>
       {% }) %}
       <li>
-        <span title="{{t('Create Page')}}" class="mr-2 badge badge-success wizard-page-label" ref="addPage">
-          <i class="{{iconClass('plus')}}"></i> {{t('Page')}}
+        <span title="{{t('创建页面')}}" class="mr-2 badge badge-success wizard-page-label" ref="addPage">
+          <i class="{{iconClass('plus')}}"></i> {{t('页面')}}
         </span>
       </li>
     </ol>
