--- a/src/templates/bootstrap/pdf/form.hbs
+++ b/src/templates/bootstrap/pdf/form.hbs
@@ -6,5 +6,5 @@
 		<i class="glyphicon glyphicon-zoom-out"></i>
 	</span>
   <div ref="iframeContainer"></div>
-  <button type="button" class="btn btn-primary" ref="submitButton">Submit</button>
+  <button type="button" class="btn btn-primary" ref="submitButton">保存</button>
 </div>
