Fixed a bug and more translation.

--- a/docs/file/src/components/address/Address.js.html
+++ b/docs/file/src/components/address/Address.js.html
@@ -231,7 +231,7 @@ export default class AddressComponent extends TextFieldComponent {
   static schema(...extend) {
     return TextFieldComponent.schema({
       type: &apos;address&apos;,
-      label: &apos;Address&apos;,
+      label: &apos;&#x5730;&#x5740;&apos;,
       key: &apos;address&apos;,
       map: {
         region: &apos;&apos;,
@@ -242,7 +242,7 @@ export default class AddressComponent extends TextFieldComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Address&apos;,
+      title: &apos;&#x5730;&#x5740;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;home&apos;,
       documentation: &apos;http://help.form.io/userguide/#address&apos;,
