--- a/docs/file/src/components/button/Button.js.html
+++ b/docs/file/src/components/button/Button.js.html
@@ -230,7 +230,7 @@ export default class ButtonComponent extends Field {
   static schema(...extend) {
     return Input.schema({
       type: &apos;button&apos;,
-      label: &apos;Submit&apos;,
+      label: &apos;&#x786E;&#x5B9A;&apos;,
       key: &apos;submit&apos;,
       size: &apos;md&apos;,
       leftIcon: &apos;&apos;,
@@ -246,7 +246,7 @@ export default class ButtonComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Button&apos;,
+      title: &apos;&#x6309;&#x94AE;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;stop&apos;,
       documentation: &apos;http://help.form.io/userguide/#button&apos;,
