--- a/docs/file/src/components/checkbox/Checkbox.js.html
+++ b/docs/file/src/components/checkbox/Checkbox.js.html
@@ -229,7 +229,7 @@ export default class CheckBoxComponent extends Field {
     return Field.schema({
       type: &apos;checkbox&apos;,
       inputType: &apos;checkbox&apos;,
-      label: &apos;Checkbox&apos;,
+      label: &apos;&#x591A;&#x9009;&#x6846;&apos;,
       key: &apos;checkbox&apos;,
       dataGridLabel: true,
       labelPosition: &apos;right&apos;,
@@ -240,7 +240,7 @@ export default class CheckBoxComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Checkbox&apos;,
+      title: &apos;&#x591A;&#x9009;&#x6846;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;check-square&apos;,
       documentation: &apos;http://help.form.io/userguide/#checkbox&apos;,
