--- a/docs/file/src/components/currency/Currency.js.html
+++ b/docs/file/src/components/currency/Currency.js.html
@@ -231,14 +231,14 @@ export default class CurrencyComponent extends NumberComponent {
   static schema(...extend) {
     return NumberComponent.schema({
       type: &apos;currency&apos;,
-      label: &apos;Currency&apos;,
+      label: &apos;&#x8D27;&#x5E01;&apos;,
       key: &apos;currency&apos;
     }, ...extend);
   }
 
   static get builderInfo() {
     return {
-      title: &apos;Currency&apos;,
+      title: &apos;&#x8D27;&#x5E01;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;usd&apos;,
       documentation: &apos;http://help.form.io/userguide/#currency&apos;,
