--- a/docs/file/src/components/datetime/DateTime.js.html
+++ b/docs/file/src/components/datetime/DateTime.js.html
@@ -227,7 +227,7 @@ export default class DateTimeComponent extends Input {
   static schema(...extend) {
     return Input.schema({
       type: &apos;datetime&apos;,
-      label: &apos;Date / Time&apos;,
+      label: &apos;&#x65E5;&#x671F; / &#x65F6;&#x95F4;&apos;,
       key: &apos;dateTime&apos;,
       format: &apos;yyyy-MM-dd hh:mm a&apos;,
       useLocaleSettings: false,
@@ -262,7 +262,7 @@ export default class DateTimeComponent extends Input {
 
   static get builderInfo() {
     return {
-      title: &apos;Date / Time&apos;,
+      title: &apos;&#x65E5;&#x671F; / &#x65F6;&#x95F4;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;calendar&apos;,
       documentation: &apos;http://help.form.io/userguide/#datetime&apos;,
