--- a/docs/file/src/components/day/Day.js.html
+++ b/docs/file/src/components/day/Day.js.html
@@ -229,7 +229,7 @@ export default class DayComponent extends Field {
   static schema(...extend) {
     return Field.schema({
       type: &apos;day&apos;,
-      label: &apos;Day&apos;,
+      label: &apos;&#x65E5;&#x671F;&apos;,
       key: &apos;day&apos;,
       fields: {
         day: {
@@ -254,7 +254,7 @@ export default class DayComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Day&apos;,
+      title: &apos;&#x65E5;&#x671F;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;calendar&apos;,
       documentation: &apos;http://help.form.io/userguide/#day&apos;,
