--- a/docs/file/src/components/email/Email.js.html
+++ b/docs/file/src/components/email/Email.js.html
@@ -227,7 +227,7 @@ export default class EmailComponent extends TextFieldComponent {
   static schema(...extend) {
     return TextFieldComponent.schema({
       type: &apos;email&apos;,
-      label: &apos;Email&apos;,
+      label: &apos;&#x7535;&#x5B50;&#x90AE;&#x7BB1;&apos;,
       key: &apos;email&apos;,
       inputType: &apos;email&apos;,
       kickbox: {
@@ -238,7 +238,7 @@ export default class EmailComponent extends TextFieldComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Email&apos;,
+      title: &apos;&#x7535;&#x5B50;&#x90AE;&#x7BB1;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;at&apos;,
       documentation: &apos;http://help.form.io/userguide/#email&apos;,
