--- a/docs/file/src/components/number/Number.js.html
+++ b/docs/file/src/components/number/Number.js.html
@@ -231,7 +231,7 @@ export default class NumberComponent extends Input {
   static schema(...extend) {
     return Input.schema({
       type: &apos;number&apos;,
-      label: &apos;Number&apos;,
+      label: &apos;&#x6570;&#x5B57;&#x8F93;&#x5165;&#x6846;&apos;,
       key: &apos;number&apos;,
       validate: {
         min: &apos;&apos;,
@@ -244,7 +244,7 @@ export default class NumberComponent extends Input {
 
   static get builderInfo() {
     return {
-      title: &apos;Number&apos;,
+      title: &apos;&#x6570;&#x5B57;&#x8F93;&#x5165;&#x6846;&apos;,
       icon: &apos;hashtag&apos;,
       group: &apos;basic&apos;,
       documentation: &apos;http://help.form.io/userguide/#number&apos;,
