--- a/docs/file/src/components/password/Password.js.html
+++ b/docs/file/src/components/password/Password.js.html
@@ -228,7 +228,7 @@ export default class PasswordComponent extends TextFieldComponent {
   static schema(...extend) {
     return TextFieldComponent.schema({
       type: &apos;password&apos;,
-      label: &apos;Password&apos;,
+      label: &apos;&#x5BC6;&#x7801;&#x6846;&apos;,
       key: &apos;password&apos;,
       protected: true,
       tableView: false,
@@ -237,7 +237,7 @@ export default class PasswordComponent extends TextFieldComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Password&apos;,
+      title: &apos;&#x5BC6;&#x7801;&#x6846;&apos;,
       icon: &apos;asterisk&apos;,
       group: &apos;basic&apos;,
       documentation: &apos;http://help.form.io/userguide/#password&apos;,
