--- a/docs/file/src/components/radio/Radio.js.html
+++ b/docs/file/src/components/radio/Radio.js.html
@@ -229,7 +229,7 @@ export default class RadioComponent extends Field {
     return Field.schema({
       type: &apos;radio&apos;,
       inputType: &apos;radio&apos;,
-      label: &apos;Radio&apos;,
+      label: &apos;&#x5355;&#x9009;&#x6846;&apos;,
       key: &apos;radio&apos;,
       values: [{ label: &apos;&apos;, value: &apos;&apos; }],
       fieldSet: false
@@ -238,7 +238,7 @@ export default class RadioComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Radio&apos;,
+      title: &apos;&#x5355;&#x9009;&#x6846;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;dot-circle-o&apos;,
       weight: 80,
