--- a/docs/file/src/components/select/Select.js.html
+++ b/docs/file/src/components/select/Select.js.html
@@ -232,7 +232,7 @@ export default class SelectComponent extends Field {
   static schema(...extend) {
     return Field.schema({
       type: &apos;select&apos;,
-      label: &apos;Select&apos;,
+      label: &apos;&#x4E0B;&#x62C9;&#x6846;&apos;,
       key: &apos;select&apos;,
       data: {
         values: [],
@@ -266,7 +266,7 @@ export default class SelectComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Select&apos;,
+      title: &apos;&#x4E0B;&#x62C9;&#x6846;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;th-list&apos;,
       weight: 70,
