--- a/docs/file/src/components/selectboxes/SelectBoxes.js.html
+++ b/docs/file/src/components/selectboxes/SelectBoxes.js.html
@@ -228,7 +228,7 @@ export default class SelectBoxesComponent extends RadioComponent {
   static schema(...extend) {
     return RadioComponent.schema({
       type: &apos;selectboxes&apos;,
-      label: &apos;Select Boxes&apos;,
+      label: &apos;&#x9009;&#x62E9;&#x5668;&apos;,
       key: &apos;selectBoxes&apos;,
       inline: false
     }, ...extend);
@@ -236,7 +236,7 @@ export default class SelectBoxesComponent extends RadioComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Select Boxes&apos;,
+      title: &apos;&#x9009;&#x62E9;&#x5668;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;plus-square&apos;,
       weight: 60,
