--- a/docs/file/src/components/signature/Signature.js.html
+++ b/docs/file/src/components/signature/Signature.js.html
@@ -229,7 +229,7 @@ export default class SignatureComponent extends Input {
   static schema(...extend) {
     return Input.schema({
       type: &apos;signature&apos;,
-      label: &apos;Signature&apos;,
+      label: &apos;&#x7B7E;&#x540D;&apos;,
       key: &apos;signature&apos;,
       footer: &apos;Sign above&apos;,
       width: &apos;100%&apos;,
@@ -243,7 +243,7 @@ export default class SignatureComponent extends Input {
 
   static get builderInfo() {
     return {
-      title: &apos;Signature&apos;,
+      title: &apos;&#x7B7E;&#x540D;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;pencil&apos;,
       weight: 120,
