--- a/docs/file/src/components/survey/Survey.js.html
+++ b/docs/file/src/components/survey/Survey.js.html
@@ -229,7 +229,7 @@ export default class SurveyComponent extends Field {
   static schema(...extend) {
     return Field.schema({
       type: &apos;survey&apos;,
-      label: &apos;Survey&apos;,
+      label: &apos;&#x8C03;&#x67E5;&#x8868;&apos;,
       key: &apos;survey&apos;,
       questions: [],
       values: []
@@ -238,7 +238,7 @@ export default class SurveyComponent extends Field {
 
   static get builderInfo() {
     return {
-      title: &apos;Survey&apos;,
+      title: &apos;&#x8C03;&#x67E5;&#x8868;&apos;,
       group: &apos;advanced&apos;,
       icon: &apos;list&apos;,
       weight: 110,
