--- a/docs/file/src/components/tags/Tags.js.html
+++ b/docs/file/src/components/tags/Tags.js.html
@@ -229,7 +229,7 @@ export default class TagsComponent extends Input {
   static schema(...extend) {
     return Input.schema({
       type: &apos;tags&apos;,
-      label: &apos;Tags&apos;,
+      label: &apos;&#x6807;&#x7B7E;&apos;,
       key: &apos;tags&apos;,
       delimeter: &apos;,&apos;,
       storeas: &apos;string&apos;,
@@ -239,7 +239,7 @@ export default class TagsComponent extends Input {
 
   static get builderInfo() {
     return {
-      title: &apos;Tags&apos;,
+      title: &apos;&#x6807;&#x7B7E;&apos;,
       icon: &apos;tags&apos;,
       group: &apos;advanced&apos;,
       documentation: &apos;http://help.form.io/userguide/#tags&apos;,
