--- a/docs/file/src/components/textarea/TextArea.js.html
+++ b/docs/file/src/components/textarea/TextArea.js.html
@@ -232,7 +232,7 @@ export default class TextAreaComponent extends TextFieldComponent {
   static schema(...extend) {
     return TextFieldComponent.schema({
       type: &apos;textarea&apos;,
-      label: &apos;Text Area&apos;,
+      label: &apos;&#x6587;&#x672C;&#x57DF;&apos;,
       key: &apos;textArea&apos;,
       rows: 3,
       wysiwyg: false,
@@ -247,7 +247,7 @@ export default class TextAreaComponent extends TextFieldComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Text Area&apos;,
+      title: &apos;&#x6587;&#x672C;&#x57DF;&apos;,
       group: &apos;basic&apos;,
       icon: &apos;font&apos;,
       documentation: &apos;http://help.form.io/userguide/#textarea&apos;,
