--- a/docs/file/src/components/time/Time.js.html
+++ b/docs/file/src/components/time/Time.js.html
@@ -228,7 +228,7 @@ export default class TimeComponent extends TextFieldComponent {
   static schema(...extend) {
     return TextFieldComponent.schema({
       type: &apos;time&apos;,
-      label: &apos;Time&apos;,
+      label: &apos;&#x65F6;&#x95F4;&apos;,
       key: &apos;time&apos;,
       inputType: &apos;time&apos;,
       format: &apos;HH:mm&apos;
@@ -247,7 +247,7 @@ export default class TimeComponent extends TextFieldComponent {
 
   static get builderInfo() {
     return {
-      title: &apos;Time&apos;,
+      title: &apos;&#x65F6;&#x95F4;&apos;,
       icon: &apos;clock-o&apos;,
       group: &apos;advanced&apos;,
       documentation: &apos;http://help.form.io/userguide/#time&apos;,
