formio-component-form

--- a/src/sass/formio.form.builder.scss
+++ b/src/sass/formio.form.builder.scss
@@ -85,11 +85,11 @@
 
 .formcomponents .formcomponent {
   text-align: left;
-  padding: 5px 5px 5px 8px;
-  margin-top: 0.2rem;
-  font-size: 0.8em;
-  line-height: 1.2;
-  border-radius: 0.3em;
+    padding: 0.6rem 1rem;
+    margin-top: 0.4rem;
+    font-size: 0.9rem;
+    line-height: 1.2;
+    border-radius: 0.3rem;
 }
 
 .form-builder-panel .panel-body {
